src/styles/_message.scss
.msg {
    display: flex;
    margin-bottom: 24px;

    &:first-child {
        margin-top: 30px;
    }

    &:last-child {
        margin-bottom: 5px;
    }

    &.left {
        // Messaggio va a sinistra se viene applicata la classe .left
        justify-content: flex-start;
    }

    &.right {
        // Messaggio va a destra se viene applicata la classe .right
        justify-content: flex-end;
    }

    .msg-avatar {

        &.left {
            // Avatar va a sinistra se viene applicata la classe .left
            order: 0;
        }

        &.right {
            // Avatar va a destra se viene applicata la classe .right
            order: 1;
        }

        img {
            width: 40px;
            height: 40px;
            border-radius: 50%;
        }
    }

    .msg-box {
        max-width: 737px;
        min-width: 350px;

        &.left {
            margin-left: 20px;
            margin-right: 40px;
        }

        &.right {
            margin-left: 40px;
            margin-right: 20px;
        }

        .msg-header {
            display: flex;
            justify-content: space-between;
            padding-left: 5px;

            span:nth-child(1) {
                // Nome e cognome
                font-family: $font-bold;
                font-size: 14px;
                color: $color-text-displayname;
                line-height: 18px;
            }

            span:nth-child(2) {
                // Data messaggio
                font-family: $font-family;
                font-size: 12px;
                color: $color-info;
                line-height: 18px;
            }
        }
    }

    .msg-bubble {
        margin: 10px 0px 20px 6px;
        position: relative;
        width: auto;
        height: auto;

        div {
            /* Contenitore del messaggio */
            padding: 25px 30px 25px 37px;
            text-align: left;
            line-height: 1.5em;

            p {
                display: -webkit-box;
                -webkit-margin-before: 0em;
                -webkit-margin-after: 0em;
            }
        }

        &.left {
            background-color: $color-type-1;

            &:after {
                content: " ";
                position: absolute;
                width: 0;
                height: 0;
                left: -10px;
                right: auto;
                top: 0px;
                bottom: auto;
                border: 20px solid;
                border-color: $color-type-1 transparent transparent transparent;
            }
        }

        &.right {
            background-color: $color-type-2;

            &:after {
                content: " ";
                position: absolute;
                width: 0;
                height: 0;
                left: auto;
                right: -10px;
                top: 0px;
                bottom: auto;
                border: 20px solid;
                border-color: $color-type-2 transparent transparent transparent;
            }
        }
    }
}

.clamp {
    -webkit-line-clamp: 3; /* massimo numero di linee */
    -webkit-box-orient: vertical;
     overflow: hidden;
}

